[tool.poetry]
name = "arpah-usecase2"
version = "0.1.0"
description = ""
authors = ["Aécio Santos <aecio.solando@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.25.2"
pandas = "^2.0.3, !=2.1.0"
pyarrow = "^13.0.0"
jupyter = "^1.0.0"
scipy = "^1.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

